hphp/test/zend/good/Zend/tests/access_modifiers_002.php.expectf
Fatal error: Properties cannot be declared final in %s/access_modifiers_002.php on line 4
